--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
-@import url("./styles/header.css");
-@import url("./styles/banner.css");
+@import url("styles/header.css");
+@import url("styles/banner.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
-    --brnco: #FFFFFF;
+    --branco: #FFFFFF;
     --laranja: #EB9B00;
-    --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%)
-    --fonte-principal:"Poppins";
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
 }
 
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
-    font-size: 16x;
+    font-size: 16px;
     font-weight: 400;
 }
 
-
-
+a {
+    text-decoration: none;
+}
