--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,12 @@
-.cabeçalho_menu-hamburger{
+.cabeçalho_menu-hamburguer {
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
     display: inline-block;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position : center;
 }
- 
+
 .cabeçalho{
     background-color: var(--branco);
     display: flex;
@@ -15,15 +15,15 @@
     position: relative;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
 }
 
-.containen_imagem{
+.container_imagem {
     padding: 1em;
 }
- 
+
 .lista-menu{
     display: none;
     position: absolute;
@@ -31,22 +31,23 @@
     width: 60vw;
 }
 
-.container__botao:checked ~.lista-menu{
+.container__botao:checked ~ .lista-menu{
     display: block;
 }
 
-.lista-menu_titulo, .lista-menu_item{
+.lista-menu__titulo,
+.lista-menu__item {
     padding: 1em;
     background-color: var(--branco);
     font-family: var(--fonte-principal);
 }
 
-.lista-menu_titulo{
+.lista-menu__titulo {
     color: var(--laranja);
     font-weight: 700;
 }
 
-.lista-menu_link{
+.lista-menu__link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -54,6 +55,6 @@
     text-transform: uppercase;
 }
 
-.conttainer_botao{
+.container__botao {
     display: none;
 }
