--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --roxo: #9500eb;
+    --azul-degrade: linear-gradient(97.54deg, #240052 35.49%, #327c89 165.37%);
     --fonte-principal: "Poppins";
 }
 
